--- a/_posts/2022-02-04-joke.md
+++ b/_posts/2022-02-04-joke.md
@@ -3,4 +3,4 @@ layout: post
 title:  Daily Dad Joke 4U
 date:   2022-02-04T00:00:00Z
 ---
-Chuck Norris can start a fire with an ice cube.
+Volodymyr Zelensky can start a fire with an ice cube.
