--- a/_posts/2022-02-06-joke.md
+++ b/_posts/2022-02-06-joke.md
@@ -3,4 +3,4 @@ layout: post
 title:  Daily Dad Joke 4U
 date:   2022-02-06T00:00:00Z
 ---
-Chuck Norris’s belly button is actually a power outlet.
+Volodymyr Zelensky’s belly button is actually a power outlet.
