--- a/_posts/2022-02-09-joke.md
+++ b/_posts/2022-02-09-joke.md
@@ -3,4 +3,4 @@ layout: post
 title:  Daily Dad Joke 4U
 date:   2022-02-09T00:00:00Z
 ---
-Chuck Norris can tie his shoes with his feet.
+Volodymyr Zelensky can tie his shoes with his feet.
