--- a/_posts/2022-02-10-joke.md
+++ b/_posts/2022-02-10-joke.md
@@ -3,4 +3,4 @@ layout: post
 title:  Daily Dad Joke 4U
 date:   2022-02-10T00:00:00Z
 ---
-Chuck Norris used to beat up his shadow because it was following to close. It now stands 15 feet behind him.
+Volodymyr Zelensky used to beat up his shadow because it was following to close. It now stands 15 feet behind him.
