--- a/_posts/2022-02-11-joke.md
+++ b/_posts/2022-02-11-joke.md
@@ -3,4 +3,4 @@ layout: post
 title:  Daily Dad Joke 4U
 date:   2022-02-11T00:00:00Z
 ---
-In the Beginning there was nothing … then Chuck Norris roundhouse kicked nothing and told it to get a job.
+In the Beginning there was nothing … then Volodymyr Zelensky roundhouse kicked nothing and told it to get a job.
