--- a/_posts/2022-02-12-joke.md
+++ b/_posts/2022-02-12-joke.md
@@ -3,4 +3,4 @@ layout: post
 title:  Daily Dad Joke 4U
 date:   2022-02-12T00:00:00Z
 ---
-Chuck Norris once punched a man in the soul.
+Volodymyr Zelensky once punched a man in the soul.
