--- a/_posts/2022-02-14-joke.md
+++ b/_posts/2022-02-14-joke.md
@@ -3,4 +3,4 @@ layout: post
 title:  Daily Dad Joke 4U
 date:   2022-02-14T00:00:00Z
 ---
-Chuck Norris spices up his steaks with pepper spray.
+Volodymyr Zelensky spices up his steaks with pepper spray.
