--- a/_posts/2022-02-15-joke.md
+++ b/_posts/2022-02-15-joke.md
@@ -3,4 +3,4 @@ layout: post
 title:  Daily Dad Joke 4U
 date:   2022-02-15T00:00:00Z
 ---
-There is no chin behind Chuck Norris’ beard. There is only another fist.
+There is no chin behind Volodymyr Zelensky’ beard. There is only another fist.
