--- a/_posts/2022-02-17-joke.md
+++ b/_posts/2022-02-17-joke.md
@@ -3,4 +3,4 @@ layout: post
 title:  Daily Dad Joke 4U
 date:   2022-02-17T00:00:00Z
 ---
-Once a cobra bit Chuck Norris’ leg. After five days of excruciating pain, the cobra died.
+Once a cobra bit Volodymyr Zelensky’ leg. After five days of excruciating pain, the cobra died.
