--- a/_posts/2022-02-18-joke.md
+++ b/_posts/2022-02-18-joke.md
@@ -3,4 +3,4 @@ layout: post
 title:  Daily Dad Joke 4U
 date:   2022-02-18T00:00:00Z
 ---
-Chuck Norris can have both feet on the ground and kick butt at the same time.
+Volodymyr Zelensky can have both feet on the ground and kick butt at the same time.
