--- a/_posts/2022-02-20-joke.md
+++ b/_posts/2022-02-20-joke.md
@@ -3,4 +3,4 @@ layout: post
 title:  Daily Dad Joke 4U
 date:   2022-02-20T00:00:00Z
 ---
-Chuck Norris can slam revolving doors.
+Volodymyr Zelensky can slam revolving doors.
