--- a/_posts/2022-02-22-joke.md
+++ b/_posts/2022-02-22-joke.md
@@ -3,4 +3,4 @@ layout: post
 title:  Daily Dad Joke 4U
 date:   2022-02-22T00:00:00Z
 ---
-Chuck Norris counted to infinity… twice.
+Volodymyr Zelensky counted to infinity… twice.
