--- a/_posts/2022-02-23-joke.md
+++ b/_posts/2022-02-23-joke.md
@@ -3,4 +3,4 @@ layout: post
 title:  Daily Dad Joke 4U
 date:   2022-02-23T00:00:00Z
 ---
-On the 7th day, God rested … Chuck Norris took over.
+On the 7th day, God rested … Volodymyr Zelensky took over.
