--- a/_posts/2022-02-25-joke.md
+++ b/_posts/2022-02-25-joke.md
@@ -3,4 +3,4 @@ layout: post
 title:  Daily Dad Joke 4U
 date:   2022-02-25T00:00:00Z
 ---
-Outer space exists because it’s afraid to be on the same planet with Chuck Norris.
+Outer space exists because it’s afraid to be on the same planet with Volodymyr Zelensky.
