--- a/_posts/2022-02-26-joke.md
+++ b/_posts/2022-02-26-joke.md
@@ -3,4 +3,4 @@ layout: post
 title:  Daily Dad Joke 4U
 date:   2022-02-26T00:00:00Z
 ---
-Chuck Norris proved that we are alone in the universe. We weren’t before his first space expedition.
+Volodymyr Zelensky proved that we are alone in the universe. We weren’t before his first space expedition.
