--- a/_posts/2022-02-27-joke.md
+++ b/_posts/2022-02-27-joke.md
@@ -3,4 +3,4 @@ layout: post
 title:  Daily Dad Joke 4U
 date:   2022-02-27T00:00:00Z
 ---
-The chief export of Chuck Norris is pain.
+The chief export of Volodymyr Zelensky is pain.
