--- a/_posts/2022-02-03-joke.md
+++ b/_posts/2022-02-03-joke.md
@@ -3,4 +3,4 @@ layout: post
 title:  Daily Dad Joke 4U
 date:   2022-02-03T00:00:00Z
 ---
-Chuck Norris can clap with one hand.
+Volodymyr Zelensky can clap with one hand.
