--- a/_posts/2022-02-05-joke.md
+++ b/_posts/2022-02-05-joke.md
@@ -3,4 +3,4 @@ layout: post
 title:  Daily Dad Joke 4U
 date:   2022-02-05T00:00:00Z
 ---
-Chuck Norris breathes air … five times a day.
+Volodymyr Zelensky breathes air … five times a day.
