--- a/_posts/2022-02-07-joke.md
+++ b/_posts/2022-02-07-joke.md
@@ -3,4 +3,4 @@ layout: post
 title:  Daily Dad Joke 4U
 date:   2022-02-07T00:00:00Z
 ---
-In an average living room there are a thousand objects Chuck Norris could use to kill you, including the room itself.
+In an average living room there are a thousand objects Volodymyr Zelensky could use to kill you, including the room itself.
