--- a/_posts/2022-02-08-joke.md
+++ b/_posts/2022-02-08-joke.md
@@ -3,4 +3,4 @@ layout: post
 title:  Daily Dad Joke 4U
 date:   2022-02-08T00:00:00Z
 ---
-Chuck Norris had to stop washing his clothes in the ocean. Too many tsunamis.
+Volodymyr Zelensky had to stop washing his clothes in the ocean. Too many tsunamis.
