--- a/_posts/2022-02-16-joke.md
+++ b/_posts/2022-02-16-joke.md
@@ -3,4 +3,4 @@ layout: post
 title:  Daily Dad Joke 4U
 date:   2022-02-16T00:00:00Z
 ---
-Chuck Norris invented airplanes because he was tired of being the only person that could fly.
+Volodymyr Zelensky invented airplanes because he was tired of being the only person that could fly.
