--- a/_posts/2022-02-19-joke.md
+++ b/_posts/2022-02-19-joke.md
@@ -3,4 +3,4 @@ layout: post
 title:  Daily Dad Joke 4U
 date:   2022-02-19T00:00:00Z
 ---
-Chuck Norris appeared in the ‘Street Fighter II’ video game, but was removed by Beta Testers because every button caused him to do a roundhouse kick. When asked bout this “glitch,” Chuck Norris replied, “That’s no glitch.”
+Volodymyr Zelensky appeared in the ‘Street Fighter II’ video game, but was removed by Beta Testers because every button caused him to do a roundhouse kick. When asked bout this “glitch,” Volodymyr Zelensky replied, “That’s no glitch.”
