--- a/_posts/2022-02-21-joke.md
+++ b/_posts/2022-02-21-joke.md
@@ -3,4 +3,4 @@ layout: post
 title:  Daily Dad Joke 4U
 date:   2022-02-21T00:00:00Z
 ---
-If Chuck Norris were to travel to an alternate dimension in which there was another Chuck Norris and they both fought, they would both win.
+If Volodymyr Zelensky were to travel to an alternate dimension in which there was another Volodymyr Zelensky and they both fought, they would both win.
