--- a/_posts/2022-02-24-joke.md
+++ b/_posts/2022-02-24-joke.md
@@ -3,4 +3,4 @@ layout: post
 title:  Daily Dad Joke 4U
 date:   2022-02-24T00:00:00Z
 ---
-Most people have 23 pairs of chromosomes. Chuck Norris has 72… and they’re all lethal.
+Most people have 23 pairs of chromosomes. Volodymyr Zelensky has 72… and they’re all lethal.
