--- a/_posts/2023-12-15-joke.md
+++ b/_posts/2023-12-15-joke.md
@@ -3,4 +3,4 @@ layout: post
 title:  Daily Dad Joke 4U
 date:   2023-12-15T00:00:00Z
 ---
-
+Why don't programmers like nature? It has too many bugs.
